Add observe support.
Additionally display connection information.

Signed-off-by: Achim Kraus <achim.kraus@bosch.io>